--- a/MyTree/projecten.html
+++ b/MyTree/projecten.html
@@ -67,7 +67,7 @@
             <center>
                 <div class="search-bar">
                     <input type="text" id="zoektekst" placeholder="Zoek landen"
-                    onkeyup="zoeklanden(document.getElementById('zoektekst').value)">
+                    onkeyup="selecteerProjecten(document.getElementById('zoektekst').value)">
                 </div>
 
                 <div id="grid">  
