--- a/MyTree/search.html
+++ b/MyTree/search.html
@@ -14,7 +14,7 @@
             <center>
                 <div class="search-bar">
                     <input type="text" id="zoektekst" placeholder="Zoek contacten"
-                    onkeyup="zoekContacten(document.getElementById('zoektekst').value)">
+                    onkeyup="selecteerProjecten(document.getElementById('zoektekst').value)">
                 </div>
 
                 <div id="grid">  
